# boiler-plate-next-fast-api

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  run-tests.js
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
docs/: Version_Matrix.md
infra/compose/: docker-compose.dev.yml
infra/docker/: api.Dockerfile  web.Dockerfile
infra/docker/postgres/: init.sql
prisma/: schema.prisma
tests/: ci-health-check.js  health-check.js  platform-check.js
tests/api/: requirements.txt  test_main.py
tests/integration/: run-tests.js
tests/web/: basic.test.js  package-lock.json  package.json
