[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI backend"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.115.13"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
prisma = "^0.15.0"
watchfiles = "^0.21.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 